# pyseekdb

./: README.md  pyproject.toml
examples/: complete_example.py  hybrid_search_example.py  simple_example.py
pyseekdb/: __init__.py
pyseekdb/client/: __init__.py  client_base.py  client_seekdb_server.py  embedding_function.py
pyseekdb/examples/: complete_example.py  simple_example.py
pyseekdb/tests/: test_admin_database_management.py  test_client_creation.py  test_collection_dml.py  test_collection_embedding_function.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_query.py  test_default_embedding_function.py  test_offical_case.py
seekdbclient/: README.md  __init__.py
seekdbclient/client/: admin_client.py  base_connection.py  client_base.py  client_oceanbase_server.py  client_seekdb_embedded.py  client_seekdb_server.py  collection.py  filters.py  query_result.py  sql_based_collection_operator.py  sql_utils.py
seekdbclient/examples/: collection_operations_example.py  comprehensive_example.py  query_example.py  simple_example.py
seekdbclient/tests/: test_admin_database_management.py  test_client_creation.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_query.py  test_sql_utils.py  (+1 more)
tests/: test_admin_database_management.py  test_client_creation.py  test_collection_dml.py  test_collection_embedding_function.py  test_collection_get.py  test_collection_hybrid_search.py  test_collection_hybrid_search_builder_integration.py  test_collection_query.py  test_default_embedding_function.py  test_offical_case.py
(+13 files in other folders)
