[tool.poetry]
name = "pyseekdb"
version = "1.0.0.b3"
description = "A unified Python client for SeekDB that supports embedded, server, and OceanBase."
authors = ["OceanBase <open_oceanbase@oceanbase.com>"]
readme = "README.md"
license = "Apache-2.0"

packages = [{include = "pyseekdb", from = "src"}]
homepage = "https://github.com/oceanbase/pyseekdb/"
repository = "https://github.com/oceanbase/pyseekdb/"

classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/oceanbase/pyseekdb/issues"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pymysql = "^1.1.1"
pylibseekdb = "*"
onnxruntime = "1.19.0"  # Requires 1.19.0+ to support opset 5 (used by Hugging Face models)
tokenizers = "0.15.0"  # Fixed version to ensure compatibility
httpx = "*"
tqdm = "*"
tenacity = "*"
numpy = ">=1.26,<1.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pylint = "^3.2.7"

[tool.pytest.ini_options]
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
